fixed tab panel alignment

--- a/precompile/styles.less
+++ b/precompile/styles.less
@@ -82,7 +82,11 @@
 .panel-title{
     padding-left:5px;
 }
-
+.panel-body{
+    padding-left:5px!important;
+    padding-right:5px!important;
+    padding-bottom: 5px!important;
+}
 /* Media Queries */
 
 @media screen and (max-width: 768px) {
